[IMPAC-536] fix param selector css bleed

--- a/src/components/widget/widget.less
+++ b/src/components/widget/widget.less
@@ -22,6 +22,10 @@
   flex-direction: row;
 
   z-index: 4;
+
+  .editable-title {
+    flex: 1;
+  }
 }
 
 .widget-item {
